# hello-genai

./: .gitignore  COMPARISON.md  README.md  UPGRADE_GUIDE.md  docker-compose.yml
.github/workflows/: smoke-tests.yml
go-genai/: Dockerfile  README.md  docker-compose.yml  go.mod  main.go  run_app.sh
go-genai/static/: swagger.json
go-genai/static/examples/: structured_response_example.md
go-genai/static/js/: chat.js
go-genai/templates/: index.html  swagger-interactive.html
improved-py-genai/: .dockerignore  Dockerfile
node-genai/: docker-compose.yml
py-genai/: README.md  app.py  docker-compose.yml  requirements.txt
rust-genai/: .gitignore  Cargo.toml  Dockerfile  INSTRUCTIONS.md  README.md  docker-compose.yaml
rust-genai/src/: cache.rs  config.rs  handlers.rs  main.rs  rate_limit.rs
rust-genai/static/: swagger.json
rust-genai/static/css/: style.css
rust-genai/static/examples/: structured_response_example.md
rust-genai/templates/: index.html  swagger.html
