[package]
name = "rust-genai"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4", features = ["macros"] }
actix-files = "0.6"
actix-service = "2"
actix-cors = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
dashmap = "5.5"
log = "0.4"
env_logger = "0.10"
async-recursion = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
